--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.conteiner {
+.container {
     width: 600px;
     height: 300px;
     border: 3px solid black;
@@ -12,4 +12,5 @@
 img {
     width: 200px;
     position: absolute;
+    left: 0px;
 }
